--- a/pages/companies.html
+++ b/pages/companies.html
@@ -78,7 +78,9 @@
                <section>
                     <h2 class="list-header">CRISPR</h2>
                     <ol>
-                         <li class="tech-list">Beam Therapeutics</li>
+                         <li class="tech-list">
+                              <a href="../pages/beam.html">Beam Therapeutics (BEAM)</a>
+                         </li>
                          <li class="tech-list">Intellia therapeutics</li>
                          <li class="tech-list">CRISPR Therapeutics</li>
                          <li class="tech-list">Verve Therapeutics</li>
