--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -79,7 +79,7 @@
                          This can save a lot on cost. Automation in the lab is a big cost savings to many 
                          companies. The other place where technology can really help us is using Artificial 
                          Intelligence (AI) and Machine Laerning (ML) algorithms to improve on the rate of success
-                         and help lower costs. In traditional drug discovery, hundreds of molecules would have 
+                         and help lower costs. In traditional drug discovery, hundreds of molecules would have been 
                          tested by hand in the lab to see which molecule would perform best. The use of AI and ML 
                          algorithms can screen thousands of molecules and model which ones have the highest rates
                          of success. This can significantly reduce cost and improve rates of success. The use of 
