new pages and updates

--- a/pages/schrodinger.html
+++ b/pages/schrodinger.html
@@ -152,7 +152,7 @@
                             No Clinical Data Yet.
                          </p>
                     </section> 
-
+                    <p>&#42 These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
