--- a/pages/intellia.html
+++ b/pages/intellia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Recursion Pharma Profile</title>
+          <title>Intellia Therapeutics Profile</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +56,7 @@
 
           <main>
 
-               <h1 class="company-name">Recursion Pharma</h1>
+               <h1 class="company-name">Intellia Therapeutics</h1>
 
                <div  class="company-layout">
 
@@ -64,105 +64,108 @@
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
-                              Recursion is using robots to do experiments and collect data. They have a lab
-                              where they can conduct millions of experiments every week. All that data is
-                              collected into their Biohive supercomputer. This can be mined by using Artificial
-                              Intelligence (AI) and Machine Learning (ML). They can collect all the genotype 
-                              and phenotype data by using CRISPR to knock out each gene one at a time and 
-                              recording all the changes. This could lead us to discovering new connections
-                              between genetics and biology. 
+                              Intellia is one of the original CRISPR CAS9 companies. They use the original CAS9 enzyme to do gene editing.
+                              Due to the possible risks of using a double stranded break in a person, they have focused on using the technology 
+                              for editing cells outside of humans like stem cell and T cell therapies. They also proved safety and efficacy of
+                              in human gene knockout. They are also working on building their own versions of base editing and possibly 
+                              gene writing from their acquisition of Rewrite.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Pipeline</h2>
                          <p class="profiles">
-                              REC-4881 - MEK1/2 <progress class="progress-bar" value="50" max="100"></progress>
-                              Phase 2
-                         </p>
-                         <p class="profiles">
-                              REC-2282 - NF2 <progress class="progress-bar" value="50" max="100"></progress>
-                              Phase 2
-                         </p>
-                         <p class="profiles">
-                              REC-994 - CCM <progress class="progress-bar" value="50" max="100"></progress>
-                              Phase 2
-                         </p>
-                         <p class="profiles">
-                              REC-3964 Cdif <progress class="progress-bar" value="25" max="100"></progress>
+                              NTLA-2001 ATTR<progress class="progress-bar" value="25" max="100"></progress>
                               Phase 1
+                         </p>
+                         <p class="profiles">
+                              NTLA-2002 HAE<progress class="progress-bar" value="25" max="100"></progress>
+                              Phase 1
+                         </p>
+                         <p class="profiles">
+                              NTLA-2003 AATD<progress class="progress-bar" value="10" max="100"></progress>
+                              IND Enabling Studies
+                         </p>
+                         <p class="profiles">
+                              NTLA-6001 CD30<progress class="progress-bar" value="5" max="100"></progress>
+                              IND Enabling Studies
                          </p>
                     </section> 
                     
                     <section class="section-container">
                          <h2 class="list-header">Science</h2>
                          <p class="profiles">
-                              REC-4881 - This is a specialized MEK1/2 inhibitor which targets tumor growth in the GI 
-                              tract. The early phase 1 data was for safety, but there is literature that warrants testing
-                              of MEK1/2 in colorectal cancers. We will have to see the data to see how well it works.
+                              NTLA-2001 is their first therapy for in-vivo gene knockout of the ATTR gene. This is to remove the unwanted 
+                              ATTR proteins that are made from mutated genes. This is in phase 1 and the data showed up to 93% knock down of 
+                              the unwanted ATTR protein in serum.  
                          </p>
                          <p class="profiles">
-                              REC-2282 - This is a HDAC inhibitor focused on targeting NF2. The early phase 1 data showed 
-                              safety, but now it has to show efficacy in this disease.
+                              NTLA-2002 is their second therapy targeting the Kallikrein gene for knock out. The historical data from HAE 
+                              shows that the knock down of Kallikrein in the plasma can reduce the attacks from HAE. This program is in phase 1
+                              and they have some initial data showing up to 92% reduction in Kallikrein. They also showed an attack free 
+                              event time improvement.
                          </p>
                          <p class="profiles">
-                              REC-994 - This is a selective Superoxide Dismutase inhibitor. This plays a role in oxidative
-                              stress in cells. Their early phase 1 data established safety. Now we need to see the efficacy 
-                              data.
-                         </p>
-                         <p class="profiles">
-                              REC-3964 - This is designed to inhibit the toxin that is released by the C diff bacteria that infects 
-                              the GI tract during infection. This is just entering phase 1 so there is no data yet.
+                              NTLA-6001 is allogeneic CAR-T therapy targeting CD30 in Lymphomas. They are testing out a potential 
+                              immune evasion strategy where they knock out the HLA-A but match the HLA-B and HLA-C. I honestly do not 
+                              see the value to this. It seems like a really weak attempt at immune evasion. The whole point of knocking 
+                              out HLA is so you don't have to match. I wait and see the data though. My guess is it gets dropped.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Valuation</h2>
                          <p class="profiles">
-                              Cash $591 million
+                              Cash $1.3 billion
                          </p>
                          <p class="profiles">
-                              FAP: FAP affects about 50,000 patients in the US. If I give them 10% of the market share, it would be
-                              worth $750 million sales. I would put a 1x multiplier on this program. That makes this program 
-                              worth $750 million value.
+                              NTLA-2001 is shared 75% Intellia and 25% Sanofi. Their first program is for hATTR. This is about
+                              50,000 in the US for all forms. I think they could do about 2,000 per year for at least
+                              $2 million price as RNAi alternatives cost nearly $600,000 per year. I could see at least up to
+                              $4 billion sales. That would entitle Intellia to $3 billion in sales. With good phase 1 data, I would 
+                              put this multiple at .5 right now. That makes it worth $1.5 billion value.
                          </p>
                          <p class="profiles">
-                              CCM: CCM affects about 1 in 200 births. That is about 20,000 patients each year if my numbers
-                              are right. Even if they get 20% of those patients, it would be worth about $750 million sales. 
-                              They are just starting phase 2 for this program for a 1x multiplier. That makes it worth
-                              about $750 million value.
+                              NTLA-2002 is a gene knock out therapy targeting HAE. This is about 7,000 patients in the US each year.
+                              I think they could do a few hundred a year. This could be worth over $1 billion in sales. I would also 
+                              give this program .5 multiple based on the early data. That makes it worth $500 million value.
                          </p>
                          <p class="profiles">
-                              NF2: From my research, this seems to be a small indication. I don't think it would do more
-                              than $750 million by my best guess. It does have phase 1 data for a 1x multiplier. That would 
-                              make it worth another $750 million value
+                              NTLA-6001 is a CAR-T therapy for Lymphoma. I don't think I will give this program any value at all.
                          </p>
                          <p class="profiles">
-                              All in that is a $2.841 billion market cap. Based on the 164 million shares outstanding
-                              on the 10Q, that comes to $17.32.
+                              All in that is a $3.3 billion market cap. Based on the 79 shares outstanding
+                              on the 10Q, that comes to $41.77. 
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
-                              REC-4881 Phase 2 enrolling
+                              NTLA-2001 Expect US IND submission in mid 2023
                          </p>
                          <p class="profiles">
-                              REC-2282 Phase 2 enrolling
+                              NTLA-2002 IND submission and start of phase 2 in 1H 2023
                          </p>
                          <p class="profiles">
-                              REC-994 Phase 2 enrolling
+                              NTLA-3001 IND submission 2H of 2023
                          </p>
                          <p class="profiles">
-                              REC-3964 Phase 1 enrolling
+                              NTLA-6001 Looking for collaboration opportunities
                          </p>
                     </section> 
 
                     <section class="section-container">
                          <h2 class="list-header">Data Readouts</h2>
                          <p class="profiles">
-                              No Efficacy Data Yet
+                              <a href="https://ir.intelliatx.com/news-releases/news-release-details/intellia-and-regeneron-announce-initial-data-cardiomyopathy-arm">
+                               NTLA-2001 Phase 1 data
+                               </a>
+                         </p>
+                         <p class="profiles">
+                              <a href="https://ir.intelliatx.com/news-releases/news-release-details/intellia-therapeutics-presents-new-interim-data-first-human">
+                               NTLA-2001 Phase 1 data
+                               </a>
                          </p>
                     </section> 
                     <p>&#42 These are my Opinions and Estimates. They should not be considered financial advice.</p>
