--- a/pages/companies.html
+++ b/pages/companies.html
@@ -81,7 +81,9 @@
                          <li class="tech-list">
                               <a href="../pages/beam.html">Beam Therapeutics (BEAM)</a>
                          </li>
-                         <li class="tech-list">Intellia therapeutics</li>
+                         <li class="tech-list">
+                              <a href="../pages/intellia.html">Intellia Therapeutics (NTLA)</a>
+                         </li>
                          <li class="tech-list">CRISPR Therapeutics</li>
                          <li class="tech-list">Verve Therapeutics</li>
                          <li class="tech-list">Prime Medicines</li>
