--- a/pages/companies.html
+++ b/pages/companies.html
@@ -84,7 +84,9 @@
                          <li class="tech-list">
                               <a href="../pages/intellia.html">Intellia Therapeutics (NTLA)</a>
                          </li>
-                         <li class="tech-list">CRISPR Therapeutics</li>
+                         <li class="tech-list">
+                              <a href="../pages/crispr.html">CRISPR Therapeutics (CRSP)</a>
+                         </li>
                          <li class="tech-list">Verve Therapeutics</li>
                          <li class="tech-list">Prime Medicines</li>
                     </ol>
