--- a/pages/intellia.html
+++ b/pages/intellia.html
@@ -119,7 +119,7 @@
                               Cash $1.3 billion
                          </p>
                          <p class="profiles">
-                              NTLA-2001 is shared 75% Intellia and 25% Sanofi. Their first program is for hATTR. This is about
+                              NTLA-2001 is shared 75% Intellia and 25% Regeneron. Their first program is for hATTR. This is about
                               50,000 in the US for all forms. I think they could do about 2,000 per year for at least
                               $2 million price as RNAi alternatives cost nearly $600,000 per year. I could see at least up to
                               $4 billion sales. That would entitle Intellia to $3 billion in sales. With good phase 1 data, I would 
@@ -164,7 +164,7 @@
                          </p>
                          <p class="profiles">
                               <a href="https://ir.intelliatx.com/news-releases/news-release-details/intellia-therapeutics-presents-new-interim-data-first-human">
-                               NTLA-2001 Phase 1 data
+                               NTLA-2002 Phase 1 data
                                </a>
                          </p>
                     </section> 
