--- a/pages/abcellera.html
+++ b/pages/abcellera.html
@@ -126,7 +126,7 @@
                                </a>
                          </p>
                     </section> 
-                    <p>&#42 These are my Opinions and Estimates. They should not be considered financial advice.</p>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
