--- a/pages/companies.html
+++ b/pages/companies.html
@@ -87,8 +87,12 @@
                          <li class="tech-list">
                               <a href="../pages/crispr.html">CRISPR Therapeutics (CRSP)</a>
                          </li>
-                         <li class="tech-list">Verve Therapeutics</li>
-                         <li class="tech-list">Prime Medicines</li>
+                         <li class="tech-list">
+                              <a href="../pages/verve.html">Verve Therapeutics (VERV)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/prime.html">Prime Medicines (PRME)</a>
+                         </li>
                     </ol>
                </section>  
 
