--- a/pages/verve.html
+++ b/pages/verve.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Schrodinger Profile</title>
+          <title>Verve Therapeutics Profile</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +56,7 @@
 
           <main>
 
-               <h1 class="company-name">Schrodiner</h1>
+               <h1 class="company-name">Verve Therapeutics</h1>
 
                <div  class="company-layout">
 
@@ -64,92 +64,78 @@
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
-                              They are focused on translating physics based chemistry into computer aided design.
-                              It took nearly 2 decades before the system was ready to be used in early drug 
-                              development. They are developing software for drug discovery. The primary software is about
-                              physics based chemistry to design molecules. They have added a lot of other software around
-                              the drug discovery process. They license this software to other companies. They recently started
-                              using their own software to develop their own pipeline. 
+                              Verve is one of the two companies working with Base Editing. They licensed the technology from Beam 
+                              Therapeutics. They have the right to pick 4 gene targets for cardiovascular diseases. They have picked 
+                              PCSK9 and ANGPTL3 so far. They have 2 more they can pick. They also have a license for CRISPR CAS12 which
+                              they license from Broad Institute and Harvard. They also have a development platform for guided 
+                              LNP delivery. They use this delivery technology for their liver targets which is designed to target GalNac.
+                              They also license this guided LNP to Beam Therapeutics. 
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Pipeline</h2>
                          <p class="profiles">
-                              SGR-1505 - MALT1 <progress class="progress-bar" value="20" max="100"></progress>
+                              VERV-101 PCSK9<progress class="progress-bar" value="20" max="100"></progress>
                               Phase 1
                          </p>
                          <p class="profiles">
-                              SGR-2291 - CDC7 <progress class="progress-bar" value="10" max="100"></progress>
-                              IND Enabling Studies
+                              VERV-201 ANGPTL3 <progress class="progress-bar" value="10" max="100"></progress>
+                              IND Enabling Studies.
                          </p>
-                         <p class="profiles">
-                              Wee1 <progress class="progress-bar" value="5" max="100"></progress>
-                              Preclinic
-                         </p>
-                    </section> 
+                    </section>
                     
                     <section class="section-container">
                          <h2 class="list-header">Science</h2>
                          <p class="profiles">
-                              SGR-1505 - Their first drug is for MALT1. This is a Caspase Activation and Recruitment 
-                              Domain (CARD). This plays a role in B cell activation. This plays a role in some B cell related 
-                              cancers. There is no data yet from this program. 
+                              VERV-101 is a gene editing therapy that knocks out the PCSK9 gene. This is a gene associated with cardiovascular 
+                              disease. They have some promising early data for the knock down of LDL. The early data in the preclinic showed 
+                              about 67% LDL-C reduction. We will have to wait and see how that translates into humans with the phase 1 data.
                          </p>
                          <p class="profiles">
-                              SGR-2291 - Their second drug is for CDC7. This plays a role in the cell cycle and the initiation 
-                              of DNA replication. It could partner with current CDK4/6 inhibitors which do about $5 billion a year 
-                              in sales. There is no data yet for this program.
-                         </p>
-                         <p class="profiles">
-                              Wee1 - This target is one that has been attempted before by other companies, and it hasn't done so well.
-                              Those companies did not have the level of software assisted engineering. We will have to wait and see 
-                              the data, but there is always room for this to succeed with others have failed. This plays a role in the 
-                              cycle. This comes in during the last cell checkpoint before moving into mitosis.
+                              VERV-201 is a gene editing therapy that knocks out the ANGPTL3 gene. This gene plays a role in triglyceride 
+                              metabolism. There is no data yet for this program. It is still in the preclinic. 
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Valuation</h2>
                          <p class="profiles">
-                              Cash $597
+                              Cash $550 million
                          </p>
                          <p class="profiles">
-                              Sales are projected to be $194 million in revenues for 2022 with their software side of the business. 
-                              The classic Price to Sales goes from 10x to 14x. Even at 10x that gets you $194 million * 10 for
-                              = $1.9 billion value.
+                              VERV-101 I think this will be a very competitive space competing with other PCSK9 antibodies and RNAi therapies.
+                              I think they will get only a small market share of the patient is HeFH. I would estimate about 20,000 patients 
+                              a year at a price of $40,000. That comes out to about $800 million in sales. I would give them a .1 multiplier
+                              for being in early phase 1. That comes to $80 million value.
                          </p>
                          <p class="profiles">
-                              MALT1 could be upward of $750 million for B cell related cancers. It won't work in all B cell cancers. 
-                              It will be a subset that is driven by MALT1 signaling. Even so, there are limited targeted therapies
-                              for those patients. If I give it a .1 multiplier since it has no data, I would get $75 million value.
+                              VERV-201 I think this program will not only compete with other very competitive cholesterol therapies, but it
+                              will also compete with VERV-101. I still think it could manage about 20,000 patients a year at a price of $40,000. 
+                              That would make this program about $800 million in sales. I would give them .1 multiplier for the preclinical stage
+                              of development. That comes out to another $80 million value.
                          </p>
                          <p class="profiles">
-                              CDC7 could do well over $1 billion in sales if it works well with CDK4/6 inhibitors which earn about $5 billion
-                              a year. Even if it is only used in a small percentage of those patients, it could reach that $1 billion sales
-                              potential. This is still in development so I would only give it a .1 multiplier. That puts it at about $100
-                              million in value.
-                         </p>
-                         <p class="profiles">
-                              All in that is a $2.11 billion market cap. Based on the 71 million shares outstanding
-                              on the 10Q, that comes to $29.78.
+                              All in that is a $710 million market cap. Based on the 61 million shares outstanding, that comes to $11.63.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
-                              SGR-1505 Phase 1 Enrolling
+                              VERV-101 progressing outside US
                          </p>
                          <p class="profiles">
-                              SGR-2291 IND Enabling Studies
+                              VER-201 IND Enabling Studies
                          </p>
                     </section> 
 
                     <section class="section-container">
                          <h2 class="list-header">Data Readouts</h2>
                          <p class="profiles">
-                            No Clinical Data Yet.
+                              <a href="https://ir.vervetx.com/news-releases/news-release-details/verve-therapeutics-announces-publication-verve-101-preclinical">
+                               NHP Data from Preclinic
+                               </a>
                          </p>
                     </section> 
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
