--- a/pages/beam.html
+++ b/pages/beam.html
@@ -177,7 +177,7 @@
                           No Cinical Data Yet.
                          </p>
                     </section> 
-                    <p>&#42 These are my Opinions and Estimates. They should not be considered financial advice.</p>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
