--- a/pages/companies.html
+++ b/pages/companies.html
@@ -99,7 +99,9 @@
                <section>
                     <h2 class="list-header">SynBio</h2>
                     <ol>
-                         <li class="tech-list">Gingko Bioworks</li>
+                         <li class="tech-list">
+                              <a href="../pages/ginkgo.html">Ginkgo Bioworks (DNA)</a>
+                         </li>
                          <li class="tech-list">Twist Bioscience</li>
                     </ol>
                </section> 
