--- a/pages/companies.html
+++ b/pages/companies.html
@@ -102,7 +102,9 @@
                          <li class="tech-list">
                               <a href="../pages/ginkgo.html">Ginkgo Bioworks (DNA)</a>
                          </li>
-                         <li class="tech-list">Twist Bioscience</li>
+                         <li class="tech-list">
+                              <a href="../pages/twist.html">Twist Bioscience (TWST)</a>
+                         </li>
                     </ol>
                </section> 
                
