--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
                        designed to be financial advice. If you find interest in any of the companies here, 
                        you should consult your financial advisor before making any investment decisions. 
                        This is a very risky area of investing. It is not for everyone, and there is a high level
-                       of risk as many of these companies fail. This site has four key roles. They are to look at
-                       the areas of innovation behind biotechnology, the companies driving that innovation, the science
-                       behind the innovation and lastly about how to read that data.
-                    </p>
+                       of risk as many of these companies fail.
                </section>
 
                <section class="container">
@@ -76,10 +73,10 @@
 
                     <p class="large-text">
                        The first section is about the discovery and the tracking of
-                       science in the biotechnology industry that is leading the future of innovation.
-                       We will look at what technologies in science that appear to be leading the way forward.
+                       science in the biotechnology industry that is leading the innovation of the future.
+                       We will look at what technologies in the science appear to be leading the way forward.
                        These will be just my opinions and ideas. Your opinions might be different. That is OK.
-                       There is not one right way to invest in biotechnology. There is a lot of great science
+                       There is a lot of great science
                        going on in this industry. Some of it will appeal more to one investor than another. 
                        It is all about personal opinion. The innovation section will be designed to give ideas for
                        investors as a jumping off point. Not all areas of innovation will work out. Sometimes great
@@ -121,13 +118,11 @@
                          very complementary with each other when it comes to diseases. I have a huge focus on the use of
                          technology in drug discovery, genetic disease and oncology. I find having a focus on a few key topics
                          offers expertise to focus and helps me improve my success rates. I love teaching others about science.
-                         This section will include everything educational about topics like Chemistry, Biology, Hematology, 
+                         This section will include everything educational about topics like Hematology, 
                          Immunology, Genetics and Oncology. This is a learning resource. It is not necessary to know the science
                          to be a biotechnology investor, but it really helps. I find that scientists, doctors, students
                          and patients tend to like this section the most. Just a word of caution as this is not designed
-                         to be medical advice. You should always refer to your doctor. I personally think a well informed patient
-                         is a better patient who can participate in their care.
-                    </p>
+                         to be medical advice. You should always refer to your doctor.
                </section>
                
                <section class="container">
@@ -143,7 +138,7 @@
                          are not experts in designing or running clinical trials. This section will be some teaching about 
                          the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
                          data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
-                         have been doing it for many years now. Most of the takes I give on clinical data will be just my point
+                         have been doing it for many years. Most of the takes I give on clinical data will be just my point
                          of view. Other investors might not agree with my point of view on any data readout. That is OK. There
                          is a lot to consider when looking at data to include data from competitors.
                     </p>
