--- a/pages/companies.html
+++ b/pages/companies.html
@@ -129,6 +129,17 @@
                     </ol>
                </section>  
 
+               <section>
+                    <h2 class="list-header">Private CRISPR Companies</h2>
+                    <ol>
+                         <li class="tech-list">Mammoth Biosciences</li>
+                         <li class="tech-list">Arbor Biotech</li>
+                         <li class="tech-list">Scribe Therapeutics</li>
+                         <li class="tech-list">Sherlock Biosciences</li>
+                         <li class="tech-list">Inscripta</li>
+                    </ol>
+               </section>  
+
           </main>
 
           <!--Here Starts the Footer-->
