--- a/pages/excientia.html
+++ b/pages/excientia.html
@@ -152,7 +152,7 @@
                               worth of value.
                          </p>
                          <p class="profiles">
-                              All in that is a $2.22 billion market cap. Based on the 121 shares outstanding
+                              All in that is a $2.22 billion market cap. Based on the 121 million shares outstanding
                               on the financial reports, that comes to $18.34.
                          </p>
                     </section>  
