--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -77,15 +77,15 @@
                          the high level of failure. Bringing technology into the discovery process can help 
                          lower the cost. It can automate complex processes by replacing workers with robotics. 
                          This can save a lot on cost. Automation in the lab is a big cost savings to many 
-                         companies. The other place where technology can really help us is using Artificial 
-                         Intelligence (AI) and Machine Laerning (ML) algorithms to improve on the rate of success
-                         and help lower costs. In traditional drug discovery, hundreds of molecules would have been 
+                         companies. The other place where technology can really help is using Artificial 
+                         Intelligence and Machine Laerning algorithms to improve on the rate of success
+                         and help lower costs. In traditional drug discovery, hundreds of molecules would have to be 
                          tested by hand in the lab to see which molecule would perform best. The use of AI and ML 
                          algorithms can screen thousands of molecules and model which ones have the highest rates
                          of success. This can significantly reduce cost and improve rates of success. The use of 
                          AI can also be used to take genetic and biological data and make connections between
                          mechanisms of biology and genetics that we may never have thought of before. This can open 
-                         up new potential breakthroughs in diseases that have been really hard to crack like Alzheimer's 
+                         up new potential breakthroughs in diseases that have been hard to crack like Alzheimer's 
                          The future of biotechnology will belong to the companies that embrace these technologies that
                          bring technology into improving the ability of companies to make drugs cheaper and with higher
                          rates of success. This could significantly reduce drug cost over the long term.
@@ -96,8 +96,8 @@
                     <h2 class="section-title">CRISPR</h2>
                     <p class="large-text">
                          CRISPR is a gene editing tool which can revolutionize the way we treat genetic diseases 
-                         and completely create new ways to take on other diseases. It offers a low cost, easy to use, and very
-                         powerful set of tools for altering the DNA. Since its discovery, it has already completely
+                         and completely create new ways to take on other diseases like cancer. It offers a low cost, easy to use, and very
+                         powerful set of tools to alter the DNA. Since its discovery, it has already completely
                          changed the landscape of biotechnology. This gives us the ability to rewrite the human
                          code. We can build therapies using cells by reprogramming them. We can knock out 
                          genes that cause harm. We can insert new genes and replace a lost gene. We can fix a gene
@@ -107,7 +107,7 @@
                          It can engineer microbes that can produce fertilizer right in the field for the plants. It can be
                          used to engineer microbes that become sustainable manufacturing for ingredients.
                          The ability of gene editing tools to give us the ability to change the genetic code of people, plants,
-                         animals, and microbes could help us solve some of our biggest environmental issues like carbon 
+                         animals, and microbes could change the world. It can help us solve some of our biggest environmental issues like carbon 
                          emissions and global warming. Combined with other technologies, it can be a very powerful tool.
                     </p>
                </section>
@@ -144,7 +144,7 @@
                          manufacturing for immune cells in cell therapies. They can edit a stem cell with all the desired edits
                          they can make master banks of these stem cells. Then they can walk them down the path of growth
                          into T cells or NK cells for fighting cancer. This offers a low cost way to make thousands of doses
-                         at an extremely low cost. The power of this technology isn't in a single therapy, but in how the 
+                         at an extremely low cost cell therapies. The power of this technology isn't in a single therapy, but in how the 
                          technology will change the way we manufacture and develop new cell therapies.
                     </p>
                </section>
@@ -155,13 +155,13 @@
                          Since the age of genetic sequencing is upon us, we can now focus on creating therapies 
                          that are designed to target key genetic mutations in diseases like cancer. We can sequence 
                          these tumors and get the types of mutations that distinguish them from healthy cells. Then
-                         we can create therapies that target these key mutations. We have seen this space evolving 
+                         we can create therapies that target these key mutations. We have seen this space evolve 
                          over the past decade with breakthroughs like KRAS G12C. There are so many other mutations
                          out there that can be addressed with these therapies like PI3Ka. There are hundreds of proteins and 
                          enzymes inside a cell that regulate the process of growth and proliferation. Many of them
                          mutate in different cancers. We can use genetic information and other technologies like tyrosine kinase inhibitors
                          and protein degraders to go after these specific mutations that separate cancer cells from
-                         health cells. This brings with it a future where we can combine older therapies, with these Personalized
+                         healthy cells. This brings with it a future where we can combine older therapies, with these Personalized
                          Therapies and even other technologies like cell therapies. When it comes to taking on very hard
                          diseases like cancer, we can use all the tools we can get. 
                     </p>
